# vzmuinebot

./: Cargo.toml  Procfile  README.md  RustConfig  diesel.toml
locales/: en.json  ru.json
migrations/2020-05-22-072706_create_menu_items/: down.sql  up.sql
old_src/: cat_group.rs  database.rs  eat_dish.rs  eat_group.rs  eat_rest.rs  gear.rs  settings.rs
src/: basket.rs  callback.rs  cart.rs  cat_group.rs  caterer.rs  commands.rs  customer.rs  database.rs  dish.rs  eat_dish.rs  eat_group.rs  eat_group_now.rs  eat_rest.rs  eat_rest_now.rs  eater.rs  environment.rs  gear.rs  general.rs  inline.rs  language.rs  lib.rs  loc.rs  localize.rs  main.rs  models.rs  navigation.rs  node.rs  orders.rs  prepare.rs  registration.rs  schema.rs  search.rs  settings.rs  states.rs  ticket.rs
