[package]
name = "vzmuinebot"
version = "0.9.8"
authors = ["Artem Khomenko <_mag12@yahoo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
futures = "0.3.28"
tokio = { version =  "1.35.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
pretty_env_logger = "0.5.0"
teloxide = { version = "0.12.2", features = ["webhooks-axum"] }
derive_more = "0.99.17"
strum = { version = "0.25.0", features = ["derive"] }
async-recursion = "1.0.5"
smart-default = "0.7.1"
parse-display = "0.8.2"
enum-utils = "0.1.2"
chrono = "0.4.31"
text_io = "0.1.12"
arraylib = "0.3.0"
enum_default = "0.2.6"
regex = "1.10.2"
lazy_static = "1.4.0"
walkdir = "2.4.0"

# Used to setup a webhook
warp = "0.3.6"
reqwest = "0.11.23"
serde_json = "1.0.111"

# Database
once_cell = "1.19.0"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.12.1"
postgres-native-tls = "0.5.0"
native-tls = "0.2.11"
